--- a/reactjs/public/index.html
+++ b/reactjs/public/index.html
@@ -6,9 +6,9 @@
     <meta name="keywords" content="Male_Fashion, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" href="./img/logo_footer.png" type="image/png">
+    <link rel="icon" href="./img/banner/logo.png" type="image/png">
     <link rel="stylesheet" href="../public/assets/css/style.css">
-    <title>CLOTH STORE</title>
+    <title>SKIN CARE</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
